--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
         <title>Guessing Game</title>
         <link rel=stylesheet href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel=stylesheet href="guessinggame.css">
+        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="guessinggame.js"></script>
     </head>
     <body>
         <div class="container-fluid" id="game">
             <h1>Guessing Game</h1>
             <p>Please guess a number between 1 and 100.</p>
-            <p>You have 5 guesses remaining!</p>
-            <p>Numbers you've guessed so far: [] </p>
-            <form class="form-inline">
+            <p>You have <span id="numGuessesLeft">5</span> <span id="grammar">guesses</span> remaining!</p>
+            <p>Numbers you've guessed so far: <span id="guessedSoFar"></span></p>
+            <div id="infoplace"></div>
+            <form class="form-inline" id="guessform">
                 <div class="form-group">
                     <input type="number" class="form-control" placeholder="Enter guess" id="guess" required>
-                    <button type="submit" class="btn btn-primary">Submit Guess</button>
+                    <button type="submit" id="submitguess" class="btn btn-primary">Submit Guess</button>
                 </div>
             </form>
             <br>
             <form class="form-inline">
                 <div class="form-group">
-                    <button type="button" class="btn btn-warning">Get Hint</button>
+                    <button type="button" id="gethint" class="btn btn-warning">Get Hint</button>
                 </div>
             </form>
             <br>
             <form class="form-inline">
                 <div class="form-group">
-                    <button type="reset" class="btn btn-danger">Reset Game</button>
+                    <button type="reset" id="resetgame" class="btn btn-danger">Reset Game</button>
                 </div>
             </form>
         </div>
